--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ header {
 }
 
 .navbar {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   height: 100%;
 }
 
@@ -39,7 +41,6 @@ header {
   line-height: 60px;
   text-transform: uppercase;
   display: block;
-  float: left;
   margin: 0 10px;
   position: relative;
 }
